src/_static.mojo


# @always_inline
# fn arc(cr: UnsafePointer[__CairoT, MutExternalOrigin], xc: c_double, yc: c_double, radius: c_double, angle1: c_double, angle2: c_double) -> NoneType:
#     return external_call["cairo_arc", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double](cr, xc, yc, radius, angle1, angle2)

# @always_inline
# fn arc_negative(cr: UnsafePointer[__CairoT, MutExternalOrigin], xc: c_double, yc: c_double, radius: c_double, angle1: c_double, angle2: c_double) -> NoneType:
#     return external_call["cairo_arc_negative", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double](cr, xc, yc, radius, angle1, angle2)

# @always_inline
# fn rel_move_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], dx: c_double, dy: c_double) -> NoneType:
#     return external_call["cairo_rel_move_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, dx, dy)

# @always_inline
# fn rel_line_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], dx: c_double, dy: c_double) -> NoneType:
#     return external_call["cairo_rel_line_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, dx, dy)

# @always_inline
# fn rel_curve_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], dx1: c_double, dy1: c_double, dx2: c_double, dy2: c_double, dx3: c_double, dy3: c_double) -> NoneType:
#     return external_call["cairo_rel_curve_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double, c_double](cr, dx1, dy1, dx2, dy2, dx3, dy3)

# @always_inline
# fn rectangle(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double, width: c_double, height: c_double) -> NoneType:
#     return external_call["cairo_rectangle", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double](cr, x, y, width, height)

# @always_inline
# fn close_path(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_close_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn path_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin], x2: UnsafePointer[c_double, MutExternalOrigin], y2: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_path_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x1, y1, x2, y2)

# @always_inline
# fn paint(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_paint", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn paint_with_alpha(cr: UnsafePointer[__CairoT, MutExternalOrigin], alpha: c_double) -> NoneType:
#     return external_call["cairo_paint_with_alpha", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, alpha)

# @always_inline
# fn mask(cr: UnsafePointer[__CairoT, MutExternalOrigin], pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_mask", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoPatternT, MutExternalOrigin]](cr, pattern)

# @always_inline
# fn mask_surface(cr: UnsafePointer[__CairoT, MutExternalOrigin], surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], surface_x: c_double, surface_y: c_double) -> NoneType:
#     return external_call["cairo_mask_surface", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double](cr, surface, surface_x, surface_y)

# @always_inline
# fn stroke(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_stroke", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn stroke_preserve(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_stroke_preserve", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn fill(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_fill", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn fill_preserve(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_fill_preserve", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn copy_page(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_copy_page", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn show_page(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_show_page", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn in_stroke(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double) -> cairo_bool_t:
#     return external_call["cairo_in_stroke", cairo_bool_t, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, x, y)

# @always_inline
# fn in_fill(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double) -> cairo_bool_t:
#     return external_call["cairo_in_fill", cairo_bool_t, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, x, y)

# @always_inline
# fn in_clip(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double) -> cairo_bool_t:
#     return external_call["cairo_in_clip", cairo_bool_t, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, x, y)

# @always_inline
# fn stroke_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin], x2: UnsafePointer[c_double, MutExternalOrigin], y2: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_stroke_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x1, y1, x2, y2)

# @always_inline
# fn fill_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin], x2: UnsafePointer[c_double, MutExternalOrigin], y2: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_fill_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x1, y1, x2, y2)

# @always_inline
# fn reset_clip(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_reset_clip", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn clip(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_clip", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn clip_preserve(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_clip_preserve", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn clip_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin], x2: UnsafePointer[c_double, MutExternalOrigin], y2: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_clip_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x1, y1, x2, y2)

# @always_inline
# fn copy_clip_rectangle_list(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoRectangleListT, MutExternalOrigin]:
#     return external_call["cairo_copy_clip_rectangle_list", UnsafePointer[__CairoRectangleListT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn rectangle_list_destroy(rectangle_list: UnsafePointer[__CairoRectangleListT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_rectangle_list_destroy", NoneType, UnsafePointer[__CairoRectangleListT, MutExternalOrigin]](rectangle_list)

# @always_inline
# fn tag_begin(cr: UnsafePointer[__CairoT, MutExternalOrigin], tag_name: UnsafePointer[c_char, ImmutExternalOrigin], attributes: UnsafePointer[c_char, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_tag_begin", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](cr, tag_name, attributes)

# @always_inline
# fn tag_end(cr: UnsafePointer[__CairoT, MutExternalOrigin], tag_name: UnsafePointer[c_char, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_tag_end", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](cr, tag_name)

# @always_inline
# fn glyph_allocate(num_glyphs: c_int) -> UnsafePointer[__CairoGlyphT, MutExternalOrigin]:
#     return external_call["cairo_glyph_allocate", UnsafePointer[__CairoGlyphT, MutExternalOrigin], c_int](num_glyphs)

# @always_inline
# fn glyph_free(glyphs: UnsafePointer[__CairoGlyphT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_glyph_free", NoneType, UnsafePointer[__CairoGlyphT, MutExternalOrigin]](glyphs)

# @always_inline
# fn text_cluster_allocate(num_clusters: c_int) -> UnsafePointer[__CairoTextClusterT, MutExternalOrigin]:
#     return external_call["cairo_text_cluster_allocate", UnsafePointer[__CairoTextClusterT, MutExternalOrigin], c_int](num_clusters)

# @always_inline
# fn text_cluster_free(clusters: UnsafePointer[__CairoTextClusterT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_text_cluster_free", NoneType, UnsafePointer[__CairoTextClusterT, MutExternalOrigin]](clusters)

# @always_inline
# fn font_options_create() -> UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]:
#     return external_call["cairo_font_options_create", UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]]()

# @always_inline
# fn font_options_copy(original: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]:
#     return external_call["cairo_font_options_copy", UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](original)

# @always_inline
# fn font_options_destroy(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_font_options_destroy", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](options)

# @always_inline
# fn font_options_status(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_font_options_status", c_int, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](options))

# @always_inline
# fn font_options_merge(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], other: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_font_options_merge", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options, other)
